1.07/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: string-svc
spec:
  type: ClusterIP
  selector:
    app: string # This is the app as declared in the deployment.
  ports:
     - port: 2345 # This is a port that is available to the cluster, in this case it can be ~ anything
       protocol: TCP
       targetPort: 3000 # This is the target port
